--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet?
         </p>
-        <a href="" class="cta">Jelajahi</a>
+        <a href="https://devilgama-technology.github.io/djoerditer2/" class="cta">ACTION!</a>
       </main>
     </section>
     <!-- Hero Section end -->
