--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://www.dafont.com/casino-2.font">
 
     <!-- Feather Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -56,6 +57,15 @@
     box-shadow: none;
     transition: 0.6s;
   } */
+
+  @font-face {
+    font-family: myFont;
+    src: url(Casino.ttf);
+  }
+
+  .hero .content h1 {
+    font-family: myFont;
+  }
 
 </style>
   </head>
