--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <main class="content">
         <h3>It's a</h3><h1><span>WRAP! #1</span></h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet?
+          Workshop Rangkaian Awal Pembelajaran
         </p>
         <a href="https://devilgama-technology.github.io/djoerditer2/" class="cta">ACTION!</a>
       </main>
